--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100px;
   padding-bottom: 395px;
-  background-color: #ef0300;
+  background-color: #fea200;
 }
 
 .nav-container-2 {
@@ -19,7 +19,7 @@
   align-items: center;
   padding-top: 35px;
   padding-bottom: 330px;
-  background-color: #fea200;
+  background-color: teal;
 }
 
 .home-logo {
@@ -44,15 +44,15 @@
   margin-top: -200px;
   padding: 40px 80px;
   background-color: white;
-  border: 1px solid #db8d07;
+  border: 1px solid rgb(1, 110, 110);
   height: 395px;
 }
 
 .movieImage {
   margin-right: 35px;
   float: left;
-  border: 1px solid #fea200;
-  box-shadow: 5px 10px #fea200;
+  border: 1px solid teal;
+  box-shadow: 5px 10px teal;
 }
 
 .details {
@@ -85,14 +85,12 @@
   .nav-container {
     width: 100%;
     height: 100px;
-    background-color: #ef0300;
     padding-bottom: 0;
   }
 
   .nav-container-2 {
     width: 100%;
     height: 96px;
-    background-color: white;
     padding-bottom: 0;
   }
 
@@ -101,7 +99,6 @@
     height: 88px;
     display: flex;
     align-items: center;
-    background-color: #fea200;
     padding-bottom: 0;
   }
 
