added filter functionality

--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,18 +1,27 @@
 <div class="movieListContainer">
-  <div *ngFor="let array of newArray; index as i" class="movieCard">
+  <div *ngFor="let array of movieInfo; index as i" class="movieCard">
     <div class="moviePoster">
       <img
-        [src]="'https://image.tmdb.org/t/p/w92' + array.results[i].poster_path"
-        (click)="routeToDetails(array.results[i].id)"
+        *ngIf="array.poster_path != null"
+        [src]="'https://image.tmdb.org/t/p/w92' + array.poster_path"
+        (click)="routeToDetails(array.id)"
         alt=""
+      />
+      <img
+        *ngIf="array.poster_path == null"
+        src="./../../assets/default-movie.png"
+        (click)="routeToDetails(array.id)"
+        alt=""
+        height="138"
+        width="90"
       />
     </div>
     <div class="movieInformation">
       <div class="titleAndYear">
-        <div class="movieTitleText">{{ array.results[i].title }}</div>
-        <div class="yearText">({{ array.results[i].release_date }})</div>
+        <div class="movieTitleText">{{ array.title }}</div>
+        <div class="yearText">({{ array.release_date }})</div>
       </div>
-      Genre: {{ array.results[i].genre_ids }}
+      Genre: {{ array.genre_ids }}
       <div class="addRemoveButton">
         <img src="./../../assets/icon-ticket.svg" />
         <p class="addOrRemoveText">Add</p>
