--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -18,7 +18,14 @@
 </div>
 <div class="movieContainer">
   <img
+    *ngIf="movieDetails.poster_path != null"
     src="{{ posterPath }}{{ movieDetails.poster_path }}"
+    class="movieImage"
+  />
+
+  <img
+    *ngIf="movieDetails.poster_path == null"
+    src="./../../assets/default-movie.png"
     class="movieImage"
   />
   <div class="details">
