--- a/src/app/movie-list/movie-list.component.css
+++ b/src/app/movie-list/movie-list.component.css
@@ -1,57 +1,61 @@
 .movieListContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 540px;
-    margin-left: 70%;
-    margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 540px;
+  margin-left: 70%;
+  margin-top: 100px;
 }
 
 .movieCard {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 150px;
-    margin-bottom: 10px;
-    padding: 16px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    font-family: 'Noto Sans', sans-serif;
-    color: #333333;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 150px;
+  margin-bottom: 10px;
+  padding: 16px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  font-family: "Noto Sans", sans-serif;
+  color: #333333;
 }
 
 .moviePoster {
-    margin-right: 28px;
+  margin-right: 28px;
 }
 
 .movieInformation {
-    width: 100%;
+  width: 100%;
 }
 
 .titleAndYear {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
 .movieTitleText {
-    font-size: 18px;
-    padding-right: 8px;
+  font-size: 18px;
+  padding-right: 8px;
 }
 
 .yearText {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .addRemoveButton {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    padding-top: 13%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding-top: 13%;
 }
 
 .addOrRemoveText {
-    font-family: 'Lobster';
-    font-size: 18px;
-    padding-left: 4px;
+  font-family: "Lobster";
+  font-size: 18px;
+  padding-left: 4px;
+}
+
+img {
+  cursor: pointer;
 }
