--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -21,11 +21,10 @@
         <div class="movieTitleText">{{ array.title }}</div>
         <div class="yearText">({{ array.release_date }})</div>
       </div>
-      Genre: {{ array.genre_ids }}
-      <div class="addRemoveButton">
-        <img src="./../../assets/icon-ticket.svg" />
-        <p class="addOrRemoveText">Add</p>
-      </div>
+      Genre:
+      <span *ngFor="let array of array.genre_ids; index as i; last as isLast">
+        {{ genresDictionary[array] }}<span *ngIf="!isLast">,</span>
+      </span>
     </div>
   </div>
 </div>
