fixed path for images

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,10 +1,10 @@
 <div class="nav-container">
   <div class="nav-container-2">
     <div class="nav-container-3">
-      <img class="home-logo" src="./assets/logomark-1.svg" />
+      <img class="home-logo" src="/assets/logomark-1.svg" />
       <div class="watch-list-container">
         <img
-          src="./assets/icon-ticket.svg"
+          src="/assets/icon-ticket.svg"
           alt="watch list"
           class="watch-list"
         />
@@ -25,7 +25,7 @@
 
   <img
     *ngIf="movieDetails.poster_path == null"
-    src="./../../assets/default-movie.png"
+    src="/assets/default-movie.png"
     class="movieImage"
   />
   <div class="details">
