--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -1,7 +1,7 @@
 <div class="nav-container">
   <div class="nav-container-2">
     <div class="nav-container-3">
-      <img class="home-logo" src="./assets/logomark-1.svg" />
+      <img class="home-logo" src="/assets/logomark-1.svg" />
     </div>
   </div>
 </div>
