--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -4,7 +4,7 @@
       <img class="home-logo" src="/assets/logomark-1.svg" />
       <div class="watch-list-container">
         <img
-          src="/assets/icon-ticket.svg"
+          src="./assets/icon-ticket.svg"
           alt="watch list"
           class="watch-list"
         />
@@ -25,7 +25,7 @@
 
   <img
     *ngIf="movieDetails.poster_path == null"
-    src="/assets/default-movie.png"
+    src="./assets/default-movie.png"
     class="movieImage"
   />
   <div class="details">
